-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0
-
None
-
7779400ba (dev), eb2123801 (6.6)
For Gerrit Dashboard: QTBUG-112996 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
482976,3 | Moc: fix generated code for nested enum class corner case | dev | qt/qtbase | Status: MERGED | +2 | 0 |
486018,2 | Moc: fix generated code for nested enum class corner case | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |